
raster::predict bug when using factors (reported by vvirkki). https://github.com/rspatial/raster/issues/73

distanceFromPoints with large files: https://github.com/rspatial/raster/issues/103

colortable lost when cropping RasterBrick: https://github.com/rspatial/raster/issues/105

Error in stack() when providing both bands and varname: https://github.com/rspatial/raster/issues/97

rasterize and mutli-polygon containing hole: https://github.com/rspatial/raster/issues/93

--- 24-September-2019, version 3.0-7
Bug fixes: 
predict with character label factor variables returned NA only https://github.com/rspatial/raster/issues/68

cellFromPolygons now ignores possible incompatible (integer) user-specified default datatype (reported by John Baums, https://github.com/rspatial/raster/issues/69)


--- 22-August-2019, version: 3.0-2
Bug fixes: 
calc failed when writing to disk if the supplied function returned multiple layers as a vector. Reported by Antoine Stevens
reclassify bug reported by Jacub Nowasad. https://github.com/rspatial/raster/issues/62
extract failed for sf objects with a Z dimension. https://github.com/rspatial/raster/issues/64

More generics and namespace exports for compatability with "terra"

--- 10-July-2019, version: 2.9-22
New (hidden) function ".ifel", that is, ifelse for Raster objects (this is the R implementation of the arcpy "Con" method)
New (hidden) function ".ifel", that is, ifelse for Raster objects (this is the R implementation of the arcpy "Con" method)
Lots of namespace export additions for compatability with "terra"
Old .Call code replaced with Rcpp based code

Bug fixes: 
netcdf writing for multi-layer objects was no working. Reported by Philipp Buehler https://github.com/rspatial/raster/issues/53
better handling of factor variables in raster::predict

--- 14-May-2019, version: 2.9-5
new argument "margins" to plotRGB to allow plotting whitespace around images.
The crs is now written to ncdf files, using proj4=" "