@@ -23,7 +23,9 @@ colortable lost when cropping RasterBrick: https://github.com/rspatial/raster/is
 
 Error in stack() when providing both bands and varname: https://github.com/rspatial/raster/issues/97
 
-rasterize and mutli-polygon containing hole: https://github.com/rspatial/raster/issues/93
+rasterize and multi-polygon containing hole: https://github.com/rspatial/raster/issues/93
+
+Upside down raster: https://github.com/rspatial/raster/issues/95 (a warning is given, not really fixed yet)
 
 --- 24-September-2019, version 3.0-7
 Bug fixes: 
